k8s/base/discord-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
  labels:
    app: discord-bot
    app.kubernetes.io/component: discord-bot
    app.kubernetes.io/name: honeybee
    app.kubernetes.io/version: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      labels:
        app: discord-bot
        app.kubernetes.io/component: discord-bot
        app.kubernetes.io/name: honeybee
        app.kubernetes.io/version: dev
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: discord-bot
          image: ghcr.io/stu43005/honeybee/honeybee
          imagePullPolicy: Always
          args:
            - "discord-bot"
          resources: {}
          ports:
            - name: http-port
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthz
              port: http-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http-port
            failureThreshold: 30
            periodSeconds: 10
