k8s/base/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  labels:
    app: manager
    app.kubernetes.io/component: manager
    app.kubernetes.io/name: honeybee
    app.kubernetes.io/version: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
        app.kubernetes.io/component: manager
        app.kubernetes.io/name: honeybee
        app.kubernetes.io/version: dev
    spec:
      containers:
        - name: manager
          image: ghcr.io/stu43005/honeybee/honeybee
          imagePullPolicy: Always
          args:
            - "manager"
          resources: {}
          ports:
            - name: http-port
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthz
              port: http-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http-port
            initialDelaySeconds: 3
            periodSeconds: 10
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: manager
