k8s/base/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  labels:
    app: scheduler
    app.kubernetes.io/component: scheduler
    app.kubernetes.io/name: honeybee
    app.kubernetes.io/version: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
        app.kubernetes.io/component: scheduler
        app.kubernetes.io/name: honeybee
        app.kubernetes.io/version: dev
    spec:
      containers:
        - name: scheduler
          image: ghcr.io/stu43005/honeybee/honeybee
          imagePullPolicy: Always
          args:
            - "scheduler"
          resources: {}
          ports:
            - name: http-port
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthz
              port: http-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http-port
            failureThreshold: 30
            periodSeconds: 10
