k8s/base/metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics
  labels:
    app: metrics
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: honeybee
    app.kubernetes.io/version: dev
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
        app.kubernetes.io/component: metrics
        app.kubernetes.io/name: honeybee
        app.kubernetes.io/version: dev
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: metrics
          image: ghcr.io/stu43005/honeybee/honeybee
          imagePullPolicy: Always
          args:
            - "metrics"
          resources: {}
          ports:
            - name: http-port
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthz
              port: http-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http-port
            failureThreshold: 30
            periodSeconds: 10
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: honeybee-metrics
  labels:
    app: metrics
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: honeybee
    app.kubernetes.io/version: dev
spec:
  ports:
    - name: http-port
      port: 3000
      targetPort: 3000
  type: ClusterIP
  selector:
    app: metrics
