k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: honeybee-ingress
  labels:
    app.kubernetes.io/name: honeybee
    app.kubernetes.io/version: dev
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - honeybee
  rules:
    - http:
        paths:
          - path: /notifications/
            pathType: Prefix
            backend:
              service:
                name: honeybee-crawler
                port:
                  name: http-port
          - path: /oauth/
            pathType: Prefix
            backend:
              service:
                name: honeybee-discord-bot
                port:
                  name: http-port
